# Elysia

./: .eslintrc.cjs  .gitignore  README.md  docker-compose.yml  environment.yml  global.d.ts  package.json  robots.txt  tsconfig.json  vitest.config.ts
.github/workflows/: main.yml
api/: Dockerfile
chrome/: package.json  tsconfig.json
config/nginx/: default.conf  nginx.conf
elysia/: Dockerfile  package.json  prompt.ts  tsconfig.json
elysia/capabilities/: translate.ts
elysia/lib/: Capability.ts  Lifecycle.ts
elysia/src/: index.ts
frontend/: .eslintrc.cjs  .gitignore  Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/scripts/: ensure_consistent_translations.ts  update_from_common.ts
frontend/src/: Global.d.ts  constants.ts  env.ts  main.tsx  types.ts
frontend/src/api/: DisplayErrors.tsx  apiHooks.ts  index.ts  standardProcessor.ts
frontend/src/common/: time.ts  utility.ts
frontend/src/framework/: auth.ts  hotkeys.ts  language.ts  profile.ts  redux-store.ts  theme.ts  validators.ts
frontend/src/lib/: DeferredPromise.ts  User.ts
frontend/src/sass/: bulma.scss  bulmaPlus.sass  fonts.sass  (+2 more)
langgraph/: Dockerfile  mypy.ini  pyproject.toml
langgraph/src/: app.py  env.py  main.py  templates.py
langgraph/src/server/: __init__.py  routing.py  starlette.py
langgraph/templates/: welcome.md
langgraph/test/: placeholder_test.py
legacy/scripts/: printing.ts
scripts/: gen_dev_certs.sh
transcription/: Dockerfile  asound.conf  transcription.py
voice/: Dockerfile  package.json
voice/src/: index.ts
(+35 files in other folders)
