[project]
name = "elysia-langgraph"
version = "1.0.0"
description = "A langgraph API for processing verbal commands"
authors = [
    {name = "Alex Navarro",email = "alex@navarrotech.net"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph (>=0.4.8,<0.5.0)",
    "langchain-openai (>=0.3.21,<0.4.0)",
    "argparse (>=1.4.0,<2.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "starlette (>=0.47.0,<0.48.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.4.0"
mypy = "^1.16.0"

[tool.black]
line-length = 120
